# xiandevtest

build-git_testDtk-unknown-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  git_testDtk  git_testDtk.cbp
build-git_testDtk-unknown-Debug/git_testDtk_autogen/: moc_predefs.h
build-git_testDtk-unknown-Debug/git_testDtk_autogen/EWIEGA46WW/: qrc_resources.cpp
build-git_testDtk-unknown-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  git_testDtk  git_testDtk.cbp
build-git_testDtk-unknown-Default/git_testDtk_autogen/: moc_predefs.h
build-git_testDtk-unknown-Default/git_testDtk_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_resources.cpp
git_testDtk/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
